--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    
+     "generate-docs": "jsdoc --configure jsdoc.json --verbose"
   },
   "author": "Asim swar",
   "license": "ISC",
   "dependencies": {
+    "clean-jsdoc-theme": "^4.3.0",
+    "docdash": "^2.0.2",
     "express": "^4.21.2",
     "mongoose": "^8.11.0",
     "nodemon": "^3.1.9",
